--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="body"></div>
 
+    <script src="https://use.fortawesome.com/349cfdf6.js"></script>
   </body>
 </html>
