--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="body"></div>
 
-    <script src="https://use.fortawesome.com/349cfdf6.js"></script>
+    <!-- <script src="https://use.fortawesome.com/349cfdf6.js"></script> -->
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+
+    <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
   </body>
 </html>
